[gd_scene load_steps=9 format=2]

[ext_resource path="res://Game/Room/PortesOuest.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game/Room/PortesNord.tscn" type="PackedScene" id=2]
[ext_resource path="res://tiles/Game/Texture/texturePiece.png" type="Texture" id=3]
[ext_resource path="res://obj/Piece.obj" type="ArrayMesh" id=4]
[ext_resource path="res://Game/Room/PortesEst.tscn" type="PackedScene" id=5]
[ext_resource path="res://Game/Room/PortesSud.tscn" type="PackedScene" id=6]
[ext_resource path="res://Game/Room/Room.gd" type="Script" id=7]

[sub_resource type="SpatialMaterial" id=1]
albedo_texture = ExtResource( 3 )

[node name="Room" type="Spatial"]
script = ExtResource( 7 )

[node name="Piece" type="MeshInstance" parent="."]
mesh = ExtResource( 4 )
material/0 = SubResource( 1 )

[node name="PortesNord" parent="Piece" instance=ExtResource( 2 )]

[node name="PortesEst" parent="Piece" instance=ExtResource( 5 )]

[node name="PortesSud" parent="Piece" instance=ExtResource( 6 )]

[node name="PortesOuest" parent="Piece" instance=ExtResource( 1 )]

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )
